syntax = "proto3";
package cosmos.mint.v1beta1;

option go_package = "github.com/cosmos/cosmos-sdk/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  // current annual inflation rate
  string inflation = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // current annual expected provisions
  string annual_provisions = 2 [
    (gogoproto.moretags)   = "yaml:\"annual_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  repeated MunicipalInflationPair municipal_inflation = 3;
}

// Inflation holds parameters for individual native token inflation
message MunicipalInflation {
  // address where inflation induced new tokens will be minted
  string target_address = 2 [(gogoproto.moretags) = "yaml:\"target_address\""];
  // current ANNUAL inflation rate
  string value = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

// Pair representing denom -> inflation mapping.
// This pair-like structure will be used in `repeating MunicipalInflationPair`
// type, what will have the same Protobuf binary representation on wire as the
// `map<string, MunicipalInflation>` type.
// This means that what is serialised as `repeating MunicipalInflationPair` on
// one end can be deserialised as `map<string, MunicipalInflation>` on the other
// end, and other vice versa.
message MunicipalInflationPair {
  // token denomination
  string denom = 1;
  // Structure representing municipal inflation for the the given `denom`
  MunicipalInflation inflation = 2;
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // maximum annual change in inflation rate
  string inflation_rate = 2 [
    (gogoproto.moretags)   = "yaml:\"inflation_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // expected blocks per year
  uint64 blocks_per_year = 6 [(gogoproto.moretags) = "yaml:\"blocks_per_year\""];
}
